fixed overscrolling behavior on ios safari

--- a/we-not-chatting-frontend/src/index.css
+++ b/we-not-chatting-frontend/src/index.css
@@ -8,6 +8,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   position: fixed;
   inset: 0;
+  overflow: hidden;
 }
 
 code {
