--- a/we-not-chatting-frontend/src/views/login/login.module.css
+++ b/we-not-chatting-frontend/src/views/login/login.module.css
@@ -3,8 +3,7 @@
   flex-direction: column;
   align-items: center;
   position: relative;
-  height: 100vh;
-  min-height: 490px;
+  height: 100%;
 }
 .title {
   margin-top: 120px;
